Implementação inicial do Dapper

--- a/Pages/Apontamento.cshtml
+++ b/Pages/Apontamento.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model dotnet_cpnucleo_pages.Pages.ApontamentoModel
+@model ApontamentoModel
 @{
     ViewData["Title"] = "Apontamentos";
 }
