--- a/Pages/Apontamento/Remover.cshtml
+++ b/Pages/Apontamento/Remover.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idApontamento:int}"
-@model dotnet_cpnucleo_pages.Pages.Apontamento.RemoverModel
+@model Apontamento.RemoverModel
 @{
     ViewData["Title"] = "Remoção de Apontamento";
 }
