--- a/Pages/Impedimento/Alterar.cshtml
+++ b/Pages/Impedimento/Alterar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idImpedimento:int}"
-@model dotnet_cpnucleo_pages.Pages.Impedimento.AlterarModel
+@model Impedimento.AlterarModel
 @{
     ViewData["Title"] = "Alteração de Impedimento";
 }
