--- a/Pages/Impedimento/Incluir.cshtml
+++ b/Pages/Impedimento/Incluir.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model dotnet_cpnucleo_pages.Pages.Impedimento.IncluirModel
+@model Impedimento.IncluirModel
 @{
     ViewData["Title"] = "Inclusão de Impedimento";
 }
