--- a/Pages/Impedimento/Listar.cshtml
+++ b/Pages/Impedimento/Listar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model dotnet_cpnucleo_pages.Pages.Impedimento.ListarModel
+@model Impedimento.ListarModel
 @{
     ViewData["Title"] = "Relação de Impedimentos";
 }
