--- a/Pages/Impedimento/Remover.cshtml
+++ b/Pages/Impedimento/Remover.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idImpedimento:int}"
-@model dotnet_cpnucleo_pages.Pages.Impedimento.RemoverModel
+@model Impedimento.RemoverModel
 @{
     ViewData["Title"] = "Remoção de Impedimento";
 }
