--- a/Pages/ImpedimentoTarefa/Alterar.cshtml
+++ b/Pages/ImpedimentoTarefa/Alterar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idImpedimentoTarefa:int}"
-@model dotnet_cpnucleo_pages.Pages.ImpedimentoTarefa.AlterarModel
+@model ImpedimentoTarefa.AlterarModel
 @{
     ViewData["Title"] = "Alteração de Impedimento (Tarefa)";
 }
