--- a/Pages/ImpedimentoTarefa/Incluir.cshtml
+++ b/Pages/ImpedimentoTarefa/Incluir.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idTarefa:int}"
-@model dotnet_cpnucleo_pages.Pages.ImpedimentoTarefa.IncluirModel
+@model ImpedimentoTarefa.IncluirModel
 @{
     ViewData["Title"] = "Inclusão de Impedimento (Tarefa)";
 }
