--- a/Pages/ImpedimentoTarefa/Listar.cshtml
+++ b/Pages/ImpedimentoTarefa/Listar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idTarefa:int}"
-@model dotnet_cpnucleo_pages.Pages.ImpedimentoTarefa.ListarModel
+@model ImpedimentoTarefa.ListarModel
 @{
     ViewData["Title"] = "Relação de Impedimentos (Tarefa)";
 }
