--- a/Pages/ImpedimentoTarefa/Remover.cshtml
+++ b/Pages/ImpedimentoTarefa/Remover.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idImpedimentoTarefa:int}"
-@model dotnet_cpnucleo_pages.Pages.ImpedimentoTarefa.RemoverModel
+@model ImpedimentoTarefa.RemoverModel
 @{
     ViewData["Title"] = "Remoção de Impedimento (Tarefa)";
 }
