--- a/Pages/NaoEncontrado.cshtml
+++ b/Pages/NaoEncontrado.cshtml
@@ -1,7 +1,7 @@
 ﻿@inject IOptions<ApplicationConfigurations> OptionsApplicationConfiguration
 
 @page
-@model dotnet_cpnucleo_pages.Pages.NaoEncontradoModel
+@model NaoEncontradoModel
 @{
     Layout = null;
     ViewData["Title"] = "Status 404";
