--- a/Pages/Projeto/Alterar.cshtml
+++ b/Pages/Projeto/Alterar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idProjeto:int}"
-@model dotnet_cpnucleo_pages.Pages.Projeto.AlterarModel
+@model Projeto.AlterarModel
 @{
     ViewData["Title"] = "Alteração de Projeto";
 }
