--- a/Pages/Projeto/Incluir.cshtml
+++ b/Pages/Projeto/Incluir.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model dotnet_cpnucleo_pages.Pages.Projeto.IncluirModel
+@model Projeto.IncluirModel
 @{
     ViewData["Title"] = "Inclusão de Projeto";
 }
