--- a/Pages/Projeto/Listar.cshtml
+++ b/Pages/Projeto/Listar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model dotnet_cpnucleo_pages.Pages.Projeto.ListarModel
+@model Projeto.ListarModel
 @{
     ViewData["Title"] = "Relação de Projetos";
 }
