--- a/Pages/Recurso/Alterar.cshtml
+++ b/Pages/Recurso/Alterar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idRecurso:int}"
-@model dotnet_cpnucleo_pages.Pages.Recurso.AlterarModel
+@model Recurso.AlterarModel
 @{
     ViewData["Title"] = "Alteração de Recurso";
 }
