--- a/Pages/Recurso/Listar.cshtml
+++ b/Pages/Recurso/Listar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model dotnet_cpnucleo_pages.Pages.Recurso.ListarModel
+@model Recurso.ListarModel
 @{
     ViewData["Title"] = "Relação de Recursos";
 }
