--- a/Pages/Recurso/Remover.cshtml
+++ b/Pages/Recurso/Remover.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idRecurso:int}"
-@model dotnet_cpnucleo_pages.Pages.Recurso.RemoverModel
+@model Recurso.RemoverModel
 @{
     ViewData["Title"] = "Remoção de Recurso";
 }
