--- a/Pages/RecursoProjeto/Incluir.cshtml
+++ b/Pages/RecursoProjeto/Incluir.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idProjeto:int}"
-@model dotnet_cpnucleo_pages.Pages.RecursoProjeto.IncluirModel
+@model RecursoProjeto.IncluirModel
 @{
     ViewData["Title"] = "Inclusão de Recurso (Projeto)";
 }
