--- a/Pages/RecursoProjeto/Listar.cshtml
+++ b/Pages/RecursoProjeto/Listar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idProjeto:int}"
-@model dotnet_cpnucleo_pages.Pages.RecursoProjeto.ListarModel
+@model RecursoProjeto.ListarModel
 @{
     ViewData["Title"] = "Relação de Recursos (Projeto)";
 }
