--- a/Pages/RecursoProjeto/Remover.cshtml
+++ b/Pages/RecursoProjeto/Remover.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idRecursoProjeto:int}"
-@model dotnet_cpnucleo_pages.Pages.RecursoProjeto.RemoverModel
+@model RecursoProjeto.RemoverModel
 @{
     ViewData["Title"] = "Remoção de Recurso (Projeto)";
 }
