--- a/Pages/RecursoTarefa/Alterar.cshtml
+++ b/Pages/RecursoTarefa/Alterar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idRecursoTarefa:int}"
-@model dotnet_cpnucleo_pages.Pages.RecursoTarefa.AlterarModel
+@model RecursoTarefa.AlterarModel
 @{
     ViewData["Title"] = "Alteração de Recurso (Tarefa)";
 }
