--- a/Pages/RecursoTarefa/Incluir.cshtml
+++ b/Pages/RecursoTarefa/Incluir.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idTarefa:int}"
-@model dotnet_cpnucleo_pages.Pages.RecursoTarefa.IncluirModel
+@model RecursoTarefa.IncluirModel
 @{
     ViewData["Title"] = "Inclusão de Recurso (Tarefa)";
 }
