--- a/Pages/RecursoTarefa/Listar.cshtml
+++ b/Pages/RecursoTarefa/Listar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idTarefa:int}"
-@model dotnet_cpnucleo_pages.Pages.RecursoTarefa.ListarModel
+@model RecursoTarefa.ListarModel
 @{
     ViewData["Title"] = "Relação de Recursos (Tarefa)";
 }
