--- a/Pages/RecursoTarefa/Remover.cshtml
+++ b/Pages/RecursoTarefa/Remover.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idRecursoTarefa:int}"
-@model dotnet_cpnucleo_pages.Pages.RecursoTarefa.RemoverModel
+@model RecursoTarefa.RemoverModel
 @{
     ViewData["Title"] = "Remoção de Recurso (Tarefa)";
 }
