--- a/Pages/Sistema/Incluir.cshtml
+++ b/Pages/Sistema/Incluir.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model dotnet_cpnucleo_pages.Pages.Sistema.IncluirModel
+@model Sistema.IncluirModel
 @{
     ViewData["Title"] = "Inclusão de Sistema";
 }
