--- a/Pages/Sistema/Listar.cshtml
+++ b/Pages/Sistema/Listar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model dotnet_cpnucleo_pages.Pages.Sistema.ListarModel
+@model Sistema.ListarModel
 @{
     ViewData["Title"] = "Relação de Sistemas";
 }
