--- a/Pages/Sistema/Remover.cshtml
+++ b/Pages/Sistema/Remover.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idSistema:int}"
-@model dotnet_cpnucleo_pages.Pages.Sistema.RemoverModel
+@model Sistema.RemoverModel
 @{
     ViewData["Title"] = "Remoção de Sistema";
 }
