--- a/Pages/Tarefa/Alterar.cshtml
+++ b/Pages/Tarefa/Alterar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idTarefa:int}"
-@model dotnet_cpnucleo_pages.Pages.Tarefa.AlterarModel
+@model Tarefa.AlterarModel
 @{
     ViewData["Title"] = "Alteração de Tarefa";
 }
