--- a/Pages/Tarefa/Incluir.cshtml
+++ b/Pages/Tarefa/Incluir.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model dotnet_cpnucleo_pages.Pages.Tarefa.IncluirModel
+@model Tarefa.IncluirModel
 @{
     ViewData["Title"] = "Inclusão de Tarefa";
 }
