--- a/Pages/Tarefa/Listar.cshtml
+++ b/Pages/Tarefa/Listar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model dotnet_cpnucleo_pages.Pages.Tarefa.ListarModel
+@model Tarefa.ListarModel
 @{
     ViewData["Title"] = "Relação de Tarefas";
 }
