--- a/Pages/Tarefa/Remover.cshtml
+++ b/Pages/Tarefa/Remover.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idTarefa:int}"
-@model dotnet_cpnucleo_pages.Pages.Tarefa.RemoverModel
+@model Tarefa.RemoverModel
 @{
     ViewData["Title"] = "Remoção de Tarefa";
 }
