--- a/Pages/Workflow/Listar.cshtml
+++ b/Pages/Workflow/Listar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model dotnet_cpnucleo_pages.Pages.Workflow.ListarModel
+@model Workflow.ListarModel
 @{
     ViewData["Title"] = "Relação de Workflow";
 }
