--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model dotnet_cpnucleo_pages.Pages.LoginModel
+@model LoginModel
 @inject IOptions<ApplicationConfigurations> OptionsApplicationConfiguration
 
 @{
