--- a/Pages/Negado.cshtml
+++ b/Pages/Negado.cshtml
@@ -1,7 +1,7 @@
 ﻿@inject IOptions<ApplicationConfigurations> OptionsApplicationConfiguration
 
 @page
-@model dotnet_cpnucleo_pages.Pages.NegadoModel
+@model NegadoModel
 @{
     Layout = null;
     ViewData["Title"] = "Status 403";
