--- a/Pages/Projeto/Remover.cshtml
+++ b/Pages/Projeto/Remover.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idProjeto:int}"
-@model dotnet_cpnucleo_pages.Pages.Projeto.RemoverModel
+@model Projeto.RemoverModel
 @{
     ViewData["Title"] = "Remoção de Projeto";
 }
