--- a/Pages/Recurso/Incluir.cshtml
+++ b/Pages/Recurso/Incluir.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model dotnet_cpnucleo_pages.Pages.Recurso.IncluirModel
+@model Recurso.IncluirModel
 @{
     ViewData["Title"] = "Inclusão de Recurso";
 }
