--- a/Pages/Sistema/Alterar.cshtml
+++ b/Pages/Sistema/Alterar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idSistema:int}"
-@model dotnet_cpnucleo_pages.Pages.Sistema.AlterarModel
+@model Sistema.AlterarModel
 @{
     ViewData["Title"] = "Alteração de Sistema";
 }
