--- a/Pages/Workflow/Alterar.cshtml
+++ b/Pages/Workflow/Alterar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idWorkflow:int}"
-@model dotnet_cpnucleo_pages.Pages.Workflow.AlterarModel
+@model Workflow.AlterarModel
 @{
     ViewData["Title"] = "Alteração de Workflow";
 }
