--- a/Pages/Workflow/Incluir.cshtml
+++ b/Pages/Workflow/Incluir.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model dotnet_cpnucleo_pages.Pages.Workflow.IncluirModel
+@model Workflow.IncluirModel
 @{
     ViewData["Title"] = "Inclusão de Workflow";
 }
