--- a/Pages/Workflow/Remover.cshtml
+++ b/Pages/Workflow/Remover.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{idWorkflow:int}"
-@model dotnet_cpnucleo_pages.Pages.Workflow.RemoverModel
+@model Workflow.RemoverModel
 @{
     ViewData["Title"] = "Remoção de Workflow";
 }
