--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,15 +1,15 @@
 @using Microsoft.Extensions.Options;
 @using dotnet_cpnucleo_pages
-@using dotnet_cpnucleo_pages.Configuration;
-@using dotnet_cpnucleo_pages.Repository.Sistema
-@using dotnet_cpnucleo_pages.Repository.Projeto
-@using dotnet_cpnucleo_pages.Repository.Tarefa
-@using dotnet_cpnucleo_pages.Repository.Apontamento
-@using dotnet_cpnucleo_pages.Repository.Workflow
-@using dotnet_cpnucleo_pages.Repository.Recurso
-@using dotnet_cpnucleo_pages.Repository.Impedimento
-@using dotnet_cpnucleo_pages.Repository.ImpedimentoTarefa
-@using dotnet_cpnucleo_pages.Repository.RecursoProjeto
-@using dotnet_cpnucleo_pages.Repository.RecursoTarefa
+@using Configuration;
+@using Repository.Sistema
+@using Repository.Projeto
+@using Repository.Tarefa
+@using Repository.Apontamento
+@using Repository.Workflow
+@using Repository.Recurso
+@using Repository.Impedimento
+@using Repository.ImpedimentoTarefa
+@using Repository.RecursoProjeto
+@using Repository.RecursoTarefa
 @namespace dotnet_cpnucleo_pages.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
