Módulo de projeto tombado para uso do Dapper

--- a/Pages/Projeto/Listar.cshtml
+++ b/Pages/Projeto/Listar.cshtml
@@ -26,7 +26,7 @@
                                 <th>@Html.DisplayNameFor(x => x.Projeto.Nome)</th>
                                 <th>@Html.DisplayNameFor(x => x.Projeto.Sistema)</th>
                                 <th>@Html.DisplayNameFor(x => x.Projeto.DataInclusao)</th>
-                                @if (Model.Lista.Count > 0)
+                                @if (Model.Lista.Count() > 0)
                                 {
                                     <th class="no-sort"></th>
                                     <th class="no-sort"></th>
@@ -42,7 +42,7 @@
                                     <td>@item.Nome</td>
                                     <td>@item.Sistema.Nome</td>
                                     <td>@item.DataInclusao.Value.ToString("dd/MM/yyyy")</td>
-                                    @if (Model.Lista.Count > 0)
+                                    @if (Model.Lista.Count() > 0)
                                     {
                                         <td style="text-align: center">
                                             <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-idProjeto="@item.IdProjeto">Alterar</a>
@@ -63,7 +63,7 @@
                                 <th>@Html.DisplayNameFor(x => x.Projeto.Nome)</th>
                                 <th>@Html.DisplayNameFor(x => x.Projeto.Sistema)</th>
                                 <th>@Html.DisplayNameFor(x => x.Projeto.DataInclusao)</th>
-                                @if (Model.Lista.Count > 0)
+                                @if (Model.Lista.Count() > 0)
                                 {
                                     <th></th>
                                     <th></th>
