--- a/Pages/ImpedimentoTarefa/Listar.cshtml
+++ b/Pages/ImpedimentoTarefa/Listar.cshtml
@@ -29,7 +29,7 @@
                                 <th>@Html.DisplayNameFor(x => x.ImpedimentoTarefa.Impedimento)</th>
                                 <th>@Html.DisplayNameFor(x => x.ImpedimentoTarefa.Ativo)</th>
                                 <th>@Html.DisplayNameFor(x => x.ImpedimentoTarefa.DataInclusao)</th>
-                                @if (Model.Lista.Count > 0)
+                                @if (Model.Lista.Count() > 0)
                                 {
                                     <th class="no-sort"></th>
                                     <th class="no-sort"></th>
@@ -46,7 +46,7 @@
                                     <td>@item.Impedimento.Nome</td>
                                     <td>@(item.Ativo ? "Sim" : "Não")</td>
                                     <td>@item.DataInclusao.Value.ToString("dd/MM/yyyy")</td>
-                                    @if (Model.Lista.Count > 0)
+                                    @if (Model.Lista.Count() > 0)
                                     {
                                         <td style="text-align: center">
                                             <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-idImpedimentoTarefa="@item.IdImpedimentoTarefa">Alterar</a>
@@ -66,7 +66,7 @@
                                 <th>@Html.DisplayNameFor(x => x.ImpedimentoTarefa.Impedimento)</th>
                                 <th>@Html.DisplayNameFor(x => x.ImpedimentoTarefa.Ativo)</th>
                                 <th>@Html.DisplayNameFor(x => x.ImpedimentoTarefa.DataInclusao)</th>
-                                @if (Model.Lista.Count > 0)
+                                @if (Model.Lista.Count() > 0)
                                 {
                                     <th></th>
                                     <th></th>
