--- a/Pages/Recurso/Listar.cshtml
+++ b/Pages/Recurso/Listar.cshtml
@@ -26,7 +26,7 @@
                                 <th>@Html.DisplayNameFor(x => x.Recurso.Nome)</th>
                                 <th>@Html.DisplayNameFor(x => x.Recurso.Ativo)</th>
                                 <th>@Html.DisplayNameFor(x => x.Recurso.DataInclusao)</th>
-                                @if (Model.Lista.Count > 0)
+                                @if (Model.Lista.Count() > 0)
                                 {
                                     <th class="no-sort"></th>
                                     <th class="no-sort"></th>
@@ -41,7 +41,7 @@
                                     <td>@item.Nome</td>
                                     <td>@(item.Ativo ? "Sim" : "Não")</td>
                                     <td>@item.DataInclusao.Value.ToString("dd/MM/yyyy")</td>
-                                    @if (Model.Lista.Count > 0)
+                                    @if (Model.Lista.Count() > 0)
                                     {
                                         <td style="text-align: center">
                                             <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-idRecurso="@item.IdRecurso">Alterar</a>
@@ -59,7 +59,7 @@
                                 <th>@Html.DisplayNameFor(x => x.Recurso.Nome)</th>
                                 <th>@Html.DisplayNameFor(x => x.Recurso.Ativo)</th>
                                 <th>@Html.DisplayNameFor(x => x.Recurso.DataInclusao)</th>
-                                @if (Model.Lista.Count > 0)
+                                @if (Model.Lista.Count() > 0)
                                 {
                                     <th></th>
                                     <th></th>
