--- a/Pages/Tarefa/Listar.cshtml
+++ b/Pages/Tarefa/Listar.cshtml
@@ -26,7 +26,7 @@
                                 <th>@Html.DisplayNameFor(x => x.Tarefa.Nome)</th>
                                 <th>@Html.DisplayNameFor(x => x.Tarefa.Projeto)</th>
                                 <th>@Html.DisplayNameFor(x => x.Tarefa.DataInclusao)</th>
-                                @if (Model.Lista.Count > 0)
+                                @if (Model.Lista.Count() > 0)
                                 {
                                     <th class="no-sort"></th>
                                     <th class="no-sort"></th>
@@ -43,7 +43,7 @@
                                     <td>@item.Nome</td>
                                     <td>@item.Projeto.Nome</td>
                                     <td>@item.DataInclusao.Value.ToString("dd/MM/yyyy")</td>
-                                    @if (Model.Lista.Count > 0)
+                                    @if (Model.Lista.Count() > 0)
                                     {
                                         <td style="text-align: center">
                                             <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-idTarefa="@item.IdTarefa">Alterar</a>
@@ -67,7 +67,7 @@
                                 <th>@Html.DisplayNameFor(x => x.Tarefa.Nome)</th>
                                 <th>@Html.DisplayNameFor(x => x.Tarefa.Projeto)</th>
                                 <th>@Html.DisplayNameFor(x => x.Tarefa.DataInclusao)</th>
-                                @if (Model.Lista.Count > 0)
+                                @if (Model.Lista.Count() > 0)
                                 {
                                     <th></th>
                                     <th></th>
