--- a/Pages/Apontamento.cshtml
+++ b/Pages/Apontamento.cshtml
@@ -29,7 +29,7 @@
                                 <th>@Html.DisplayNameFor(x => x.Apontamento.DataApontamento)</th>
                                 <th>@Html.DisplayNameFor(x => x.Apontamento.QtdHoras)</th>
                                 <th>@Html.DisplayNameFor(x => x.Apontamento.DataInclusao)</th>
-                                @if (Model.Lista.Count > 0)
+                                @if (Model.Lista.Count() > 0)
                                 {
                                     <th class="no-sort"></th>
                                 }
@@ -45,7 +45,7 @@
                                     <td>@item.DataApontamento.Value.ToString("dd/MM/yyyy")</td>
                                     <td>@item.QtdHoras</td>
                                     <td>@item.DataInclusao.Value.ToString("dd/MM/yyyy")</td>
-                                    @if (Model.Lista.Count > 0)
+                                    @if (Model.Lista.Count() > 0)
                                     {
                                         <td style="text-align: center">
                                             <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Apontamento/Remover" asp-route-idApontamento="@item.IdApontamento">Remover</a>
@@ -62,7 +62,7 @@
                                 <th>@Html.DisplayNameFor(x => x.Apontamento.DataApontamento)</th>
                                 <th>@Html.DisplayNameFor(x => x.Apontamento.QtdHoras)</th>
                                 <th>@Html.DisplayNameFor(x => x.Apontamento.DataInclusao)</th>
-                                @if (Model.Lista.Count > 0)
+                                @if (Model.Lista.Count() > 0)
                                 {
                                     <th></th>
                                 }
