--- a/Pages/Workflow/Listar.cshtml
+++ b/Pages/Workflow/Listar.cshtml
@@ -26,7 +26,7 @@
                                 <th>@Html.DisplayNameFor(x => x.Workflow.Nome)</th>
                                 <th>@Html.DisplayNameFor(x => x.Workflow.Ordem)</th>
                                 <th>@Html.DisplayNameFor(x => x.Workflow.DataInclusao)</th>
-                                @if (Model.Lista.Count > 0)
+                                @if (Model.Lista.Count() > 0)
                                 {
                                     <th class="no-sort"></th>
                                     <th class="no-sort"></th>
@@ -41,7 +41,7 @@
                                     <td>@item.Nome</td>
                                     <td>@item.Ordem</td>
                                     <td>@item.DataInclusao.Value.ToString("dd/MM/yyyy")</td>
-                                    @if (Model.Lista.Count > 0)
+                                    @if (Model.Lista.Count() > 0)
                                     {
                                         <td style="text-align: center">
                                             <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-idWorkflow="@item.IdWorkflow">Alterar</a>
@@ -59,7 +59,7 @@
                                 <th>@Html.DisplayNameFor(x => x.Workflow.Nome)</th>
                                 <th>@Html.DisplayNameFor(x => x.Workflow.Ordem)</th>
                                 <th>@Html.DisplayNameFor(x => x.Workflow.DataInclusao)</th>
-                                @if (Model.Lista.Count > 0)
+                                @if (Model.Lista.Count() > 0)
                                 {
                                     <th></th>
                                     <th></th>
